--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,16 @@ body {
   background-color: #e7f0fe;
 }
 
+/* scroll */
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(186, 186, 186, 0.671);
+  border-radius: 10px;
+}
+
+/* input */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
