--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,8 @@ html {
 body {
   background-color: #e7f0fe;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+  position: relative;
 }
 
 /* scroll */
